<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="5dp">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/Toolbar"
                app:subtitleTextColor="@color/white"
                app:title="@string/app_name"
                app:titleTextAppearance="@style/Toolbar.TitleText"
                app:titleTextColor="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_gray" />

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@color/grey_bg"
            android:orientation="vertical"
            android:weightSum="1">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/tl_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/gray"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/et_name"
                            style="@style/TextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/input_border_bottom"
                            android:cursorVisible="true"
                            android:gravity="center|left|bottom"
                            android:hint="@string/hint_name"
                            android:inputType="textEmailAddress"
                            android:maxLength="50"
                            android:paddingBottom="10dp"
                            android:textColor="@color/black_effective"
                            android:textSize="18sp" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/tl_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/gray"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/et_email"
                            style="@style/TextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/input_border_bottom"
                            android:cursorVisible="true"
                            android:gravity="center|left|bottom"
                            android:hint="@string/hint_email"
                            android:inputType="textEmailAddress"
                            android:maxLength="50"
                            android:paddingBottom="10dp"
                            android:textColor="@color/black_effective"
                            android:textSize="18sp" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/tl_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/gray"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/et_phone"
                            style="@style/TextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/input_border_bottom"
                            android:cursorVisible="true"
                            android:gravity="center|left|bottom"
                            android:hint="@string/hint_phone"
                            android:inputType="textEmailAddress"
                            android:maxLength="50"
                            android:paddingBottom="10dp"
                            android:textColor="@color/black_effective"
                            android:textSize="18sp" />

                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/btn_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/add_user"
                        android:textColor="@android:color/white" />
                </LinearLayout>


            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:background="@color/grey_bg"
                android:orientation="vertical"
                android:weightSum="1">

                <android.support.v7.widget.CardView
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/spacing_medium"
                    android:layout_marginLeft="@dimen/spacing_middle"
                    android:layout_marginRight="@dimen/spacing_middle"
                    android:layout_marginTop="@dimen/spacing_medium"
                    app:cardElevation="@dimen/elevation_card">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:weightSum="1"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior">

                        <LinearLayout
                            android:id="@+id/lvEmptyData"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:visibility="visible">

                            <ImageView
                                android:id="@+id/imageViewEmpty"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_gravity="center"
                                app:srcCompat="@drawable/ic_rabbit" />

                            <TextView
                                android:id="@+id/tv_message"
                                style="@style/TextStyle.Title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="16dp"
                                android:gravity="center"
                                android:text="@string/empty_user_list"
                                android:textColor="@color/gray" />


                        </LinearLayout>

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/user_Recycler"
                            android:layout_width="fill_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.8"
                            android:paddingBottom="@dimen/spacing_large"
                            android:paddingLeft="@dimen/spacing_large"
                            android:paddingRight="@dimen/spacing_large"
                            android:scrollbars="horizontal"
                            android:visibility="gone" />

                        <Button
                            android:id="@+id/btn_book"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_margin="10dp"
                            android:layout_weight="0.2"
                            android:background="@color/colorPrimary"
                            android:text="Book"
                            android:textColor="@android:color/white"
                            android:visibility="gone" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>


            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>